# ML-Model-develops

./: README.md  app.py  appso.py  input_data_weather.csv  popo.ods  pyproject.toml  testing.ipynb
