[tool.poetry]
name = "ml model trainer application"
version = "0.1.0"
description = ""
authors = ["iamphily <pprince3700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.0"
scikit-learn = "^1.0.0"
scipy = "^1.7.0"
odfpy = "^1.4.1"
plotly = "^5.4.0"
dash ="^2.8.1"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
